model_id/tests/fail/not_enum.rs
use model_id::ModelId;

#[derive(ModelId)]
pub struct NotAnEnum {
    name: String,
}

fn main() {}
