model_id/tests/fail/not_enum.stderr
error: ModelId can only be derived for enums
 --> tests/fail/not_enum.rs:4:12
  |
4 | pub struct NotAnEnum {
  |            ^^^^^^^^^
